# UA_ba1-software-engineering

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
doc/: Doxyfile
res/xml/: input0.xml  input2.xml
src/: SimulationMain.cpp  SimulationTest.cpp
src/lib/contract/: Contract.h
src/lib/logger/: Logger.h
src/lib/path/: path.h
src/lib/utils/: Utils.h
src/lib/visualizer/: README.md
src/lib/visualizer/res/config/: constants.ini
src/lib/visualizer/res/xml/: input1.xml  input3.xml  input4.xml
src/lib/visualizer/src/: Simulation.cpp  Simulation.h
src/lib/visualizer/src/lib/logger/: Logger.cpp
src/lib/visualizer/src/lib/path/: path.cpp
src/lib/visualizer/src/lib/utils/: Id.cpp  Id.h
src/lib/visualizer/src/lib/xml-validator/: Validator.cpp
src/lib/visualizer/src/objects/: Object.h
src/lib/visualizer/src/objects/crossroad/: CrossRoadObject.cpp
src/lib/visualizer/src/objects/entities/busStop/: BusStopEntity.h
src/lib/visualizer/src/objects/entities/vehicleGenerator/: VehicleGeneratorEntity.h
src/lib/visualizer/src/objects/road/: RoadObject.cpp  RoadObject.h
src/lib/visualizer/src/tests/SimulationTest/: SimulationTest.cpp
src/lib/visualizer/src/tests/SimulationTest/expected/: ExpectedOutputCompare0.txt  ExpectedOutputCompare1.txt  ExpectedOutputCompare12.txt  ExpectedOutputCompare4.txt  ExpectedOutputCompare5.txt  ExpectedOutputCompare6-1.txt  ExpectedOutputCompare7.txt
src/lib/visualizer/src/tests/SimulationTest/res/: DESCRIPTION.md  test1.xml  test3.xml  test6.xml
src/lib/visualizer/src/tests/ValidatorTest/: ValidatorTest.cpp
src/lib/xml-validator/: Validator.h
src/objects/: Object.cpp
src/objects/crossroad/: CrossRoadObject.h
src/objects/entities/: Entity.cpp  Entity.h
src/objects/entities/busStop/: BusStopEntity.cpp
src/objects/entities/light/: LightEntity.cpp  LightEntity.h
src/objects/entities/vehicle/: VehicleEntity.cpp  VehicleEntity.h
src/objects/entities/vehicleGenerator/: VehicleGeneratorEntity.cpp
src/tests/SimulationTest/expected/: ExpectedOutputCompare10.txt  ExpectedOutputCompare11.txt  ExpectedOutputCompare13.txt  ExpectedOutputCompare15.txt  ExpectedOutputCompare2.txt  ExpectedOutputCompare3.txt  ExpectedOutputCompare6-2.txt  ExpectedOutputCompare8.txt  ExpectedOutputCompare9.txt
src/tests/SimulationTest/res/: test0.xml  test2.xml  test4.xml  test5.xml  test8.xml  test9.xml
src/tests/ValidatorTest/expected/: ExpectedErrorMessageCompare10.txt  ExpectedErrorMessageCompare12.txt  ExpectedErrorMessageCompare13.txt  ExpectedErrorMessageCompare14.txt  ExpectedErrorMessageCompare16.txt  ExpectedErrorMessageCompare18.txt  ExpectedErrorMessageCompare3.txt  ExpectedErrorMessageCompare6.txt  ExpectedErrorMessageCompare8.txt
src/tests/ValidatorTest/res/: test0.xml  test1.xml  test10.xml  test11.xml  test12.xml  test13.xml  test14.xml  test15.xml  test17.xml  test20.xml  test21.xml  test22.xml  test23.xml  test4.xml  test5.xml  test6.xml  test8.xml
(+20 files in other folders)
